Fixed swagger for get by id method
